# llm_conversation

./: .editorconfig  .gitignore  AGENTS.md  AGENT_HANDOFF.md  CONTRIBUTING.md  README.md  ai_agent.py  config_parser.py  conversation_manager.py  llm_conversation.py  pyproject.toml  requirements.txt  run.py  schema.json
.github/workflows/: checks.yaml  format-code.yaml  pypi-publish.yaml  validate-schema.yaml
scripts/: generate_schema.py  simulate_conversation.py
src/llm_conversation/: __init__.py  ai_agent.py  color.py  color_conversion.py  config.py  conversation_manager.py  logging_config.py
traces/: conversation_20251028_222257.md
